# SRExam-VU

./: package-lock.json  package.json
diagram/: Pre-TPA.vpp.bak_001d  Pre-TPA.vpp.bak_002d  Pre-TPA.vpp.bak_003d  Pre-TPA.vpp.bak_004d  Pre-TPA.vpp.bak_005d  Pre-TPA.vpp.bak_006d  UseCaseDescription.xlsx
src/: main.jsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: enrollmentop.rs  main.rs  roomop.rs  subjectop.rs  transcop.rs  userop.rs
src/Component/: AssistantExamScheduler.jsx  AssistantSchedule.jsx  Modaldetails.jsx  Navbar.jsx  NoStudentHomePage.jsx  PopUpModal2.jsx  PopupModal.jsx  StudentExamScheduler.jsx  StudentHomePage.jsx  StudentSchedule.jsx
src/routes/: Examscheduler.jsx  Homepage.jsx  Loginpage.jsx  Profilepage.jsx  Reportmanagement.jsx  Reportmanagementdetails.jsx  Roommanagement.jsx  Subjectmanagement.jsx  TransactionDetail.jsx  Usermanagement.jsx  Viewschedule.jsx  Viewtransaction.jsx
