[package]
name = "pre-tpa"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
cynic-codegen = { version = "3" }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = "25.0.0"
cynic = { version = "3", features = ["http-surf"] }
surf = "2"
uuid = "1.8.0"
base64 = "0.22.0"
rand = "0.8.5"
ring = "0.17.8"
async-std = "1.10.0"
bcrypt = "0.15.1"
hex = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25.3", features = ["aio", "async-std-comp", "tokio-comp"] }
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
